src/mcp/test/fixtures/invalid/aws-sdk-dynamic-import.fixture.ts
/**
 * @fixture invalid
 * @rule aws-sdk-encapsulation
 * @severity CRITICAL
 * @description Dynamic AWS SDK import (forbidden)
 * @expectedViolations 1
 */
const sdk = await import('@aws-sdk/client-dynamodb')

export { sdk }
